--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "redux-logger": "^3.0.6",
     "webpack": "^5.25.1",
     "webpack-cli": "^4.5.0"
